--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
     <section class="card" id="top">
       <h1>E-portfolio</h1>
       <p>
-        Jag är student vid KTH med fokus på IT och UI/UX. Den här sidan innehåller konkreta exempel på vad jag gjort,
-        och hur du kan nå mig.
+        Jag är student på KTH, och håller på med min kandidat inom IT, som del av min civilingenjörsutbildning. På denna sida kan du läsa mer om mina tidigare projekt, erferenheter och dylikt. Från denna sida kan du även se mina andra kanalaer som LinkedIn.
       </p>
 
       <div class="row" style="margin-top:6px">
@@ -88,14 +87,10 @@
 
       <div class="row" style="margin-top:10px">
         <!-- TODO: set your real links -->
-        <a class="btn" href="#" target="_blank" rel="noreferrer">LinkedIn</a>
+        <a class="btn" href="https://www.linkedin.com/in/wagstrom/" target="_blank" rel="noreferrer">LinkedIn</a>
         <a class="btn" href="https://github.com/lindhs" target="_blank" rel="noreferrer">GitHub</a>
         <button class="btn" id="copyEmailBtn" type="button">Kopiera e-post</button>
       </div>
-
-      <p class="muted" style="margin-top:8px; font-size:12px">
-        Obs: Jag publicerar inte lösningar till examinationsmoment i andra kurser. Jag länkar bara till material jag kan stå för.
-      </p>
     </section>
 
     <section class="card" id="projects">
@@ -114,14 +109,14 @@
         <li>
           <strong style="color:var(--text)">HP-appen — UI/UX praktik (Mar 2023–Sep 2023)</strong><br/>
           <span class="muted">
-            UI/UX-praktik med Figma. (Här kan du senare lägga en kort beskrivning av 1–2 saker du levererade, utan att dela känsligt material.)
+            UI/UX-praktik med Figma. Arbetade tillsamsn med mitt team för att ta fram en ny design till framsidan av applikationen. UI/UX-Design, Figma, Användar-research.
           </span>
         </li>
 
         <li>
           <strong style="color:var(--text)">ResQ — #HackYourWorld 2023 (Vinnare “Bästa Tekniska Lösning”)</strong><br/>
           <span class="muted">
-            Vinnare av “Bästa Tekniska Lösning”. (Lägg gärna till en kort beskrivning av problemet och din contribution.)
+            Vinnare av “Bästa Tekniska Lösning”. Hackathon av Ericssson, Space Academy & IBM. Här fick vi utveckla enklare prototyp, och pitcha vår ide inför en jury samt andra tävlande.
           </span>
         </li>
       </ul>
@@ -153,22 +148,6 @@
           <span class="muted">2021–2024</span>
         </li>
       </ul>
-    </section>
-
-    <section class="card" id="contact">
-      <h2>Kontakt</h2>
-      <p>
-        E-post: <span id="emailText" style="font-family:var(--mono); color:var(--text)">your.email@example.com</span><br/>
-        Plats: <span class="muted">Stockholm, Sverige</span>
-      </p>
-
-      <form class="row" id="contactForm" style="margin-top:6px">
-        <input id="fromEmail" type="email" placeholder="Din e-post" style="flex:1; min-width:220px" />
-        <input id="msg" type="text" placeholder="Kort meddelande" style="flex:2; min-width:220px" />
-        <button class="btn" type="submit">Skicka</button>
-      </form>
-
-      <p class="muted" style="font-size:12px; margin-top:8px">Formuläret öppnar din e-postklient (mailto). Ingen backend.</p>
     </section>
 
     <footer>
