--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 
   <script>
     // ---- EDIT THESE ----
-    const EMAIL = "your.email@example.com"; // TODO: set your real email (public)
-    const LINKEDIN = "#";                   // TODO: set your LinkedIn URL
+    const EMAIL = "simonwagstrom@gmail.com"; // TODO: set your real email (public)
+    const LINKEDIN = "https://www.linkedin.com/in/wagstrom/";// TODO: set your LinkedIn URL
 
     document.getElementById("year").textContent = new Date().getFullYear();
     document.getElementById("emailText").textContent = EMAIL;
